1、添加Demo的开屏逻辑

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+STORE_PASSWORD=请更换为您签名库密码
+STORE_KEY_ALIAS=请更换为您签名库别名
+STORE_KEY_PASSWORD=请更换为您签名库别名密码
