--- a/Demo/build.gradle
+++ b/Demo/build.gradle
@@ -14,10 +14,32 @@ android {
     versionName "1.0"
   }
 
+  signingConfigs {
+    release {
+      storeFile file('填写您的签名文件路径')
+      storePassword STORE_PASSWORD
+      keyAlias STORE_KEY_ALIAS
+      keyPassword STORE_KEY_PASSWORD
+
+      v1SigningEnabled true
+      v2SigningEnabled true
+    }
+  }
+
   buildTypes {
     release {
       minifyEnabled false
+      signingConfig signingConfigs.release
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    }
+
+    debug {
+      debuggable true
+      minifyEnabled false
+      shrinkResources false
+      zipAlignEnabled false
+
+      signingConfig signingConfigs.release
     }
   }
 
@@ -28,6 +50,10 @@ android {
 
   kotlinOptions {
     jvmTarget = '1.8'
+  }
+
+  viewBinding {
+    enabled = true
   }
 }
 
