--- a/Demo/build.gradle
+++ b/Demo/build.gradle
@@ -63,5 +63,7 @@ dependencies {
   implementation 'com.google.android.material:material:1.4.0'
   implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 
+  implementation 'com.google.code.gson:gson:2.8.8'
+
   implementation project(path: ':MediaMob')
 }
